--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -2,6 +2,7 @@
   color: #6a6f8c;
   background: #c8c8c8;
   font: 600 16px/18px "Open Sans", sans-serif;
+  padding-right: 50px;
 }
 
 .login-box {
@@ -20,7 +21,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  padding: 90px 70px 50px 70px;
+  padding: 90px 150px 50px 70px;
   background: rgba(0, 77, 77, 0.9);
 }
 
